# cddsctl

./: .gitignore  .versions  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  build.sh
.github/workflows/: ci.yml  release.yml  ubuntu-matrix-test.yml  version-compat.yml
.github/workflows/config/: cyclonedds-shm.xml  cyclonedds-udp.xml  roudi.toml
cli/: CMakeLists.txt  main.cpp
cli/commands/: EchoCommand.cpp  EchoCommand.hpp  HzCommand.cpp  HzCommand.hpp  InfoCommand.cpp  InfoCommand.hpp  ListCommand.cpp  ListCommand.hpp  PsCommand.cpp  PsCommand.hpp  RecordCommand.cpp  RecordCommand.hpp
config/: recorder_example.yaml
examples/: CMakeLists.txt  advanced_publisher.cpp  array_publisher.cpp  enum_publisher.cpp  nested_struct_publisher.cpp  test_publisher.cpp  union_publisher.cpp  various_types_publisher.cpp
examples/idl/: AdvancedFeatures.idl  ArraysAndSequences.idl  Enumeration.idl  NestedStruct.idl  TestTypes.idl  UnionType.idl  VariousTypes.idl
include/cddsctl/cli/: Command.hpp
include/cddsctl/core/: Config.hpp  Log.hpp  Types.hpp
include/cddsctl/dds/: CdrReader.hpp  JsonPrinter.hpp  Participant.hpp  RawDataReader.hpp  TopicDiscovery.hpp  TypeSupport.hpp  YamlPrinter.hpp
include/cddsctl/record/: Configuration.hpp  McapWriter.hpp  Recorder.hpp  TypesCollection.hpp
scripts/: build_deps.sh
src/: CMakeLists.txt
src/core/: Config.cpp  Types.cpp
src/dds/: JsonPrinter.cpp  Participant.cpp  RawDataReader.cpp  TopicDiscovery.cpp  TypeSupport.cpp  YamlPrinter.cpp
src/record/: Configuration.cpp  McapWriter.cpp  Recorder.cpp  TypesCollection.cpp
tests/: CMakeLists.txt  IDL_TESTING.md  VERSION_COMPAT_TESTING.md  test_config.cpp  test_guid.cpp  test_idl_examples.sh  test_main.cpp  test_topic_filter.cpp  test_version_compat.py  version_compat_config.yaml  version_compat_test.sh
tests/idl/: test_idl_basic.cpp  test_idl_yaml.cpp
tests/integration/: test_idl_integration.sh
